--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         // IMPORTANT: The password hash and URL remain unchanged
         const correctPasswordHash = "8d969eef6ecad3c29a3a629280e686cf0c3f5d5a86aff3ca12020c923adc6c92";
-        const appUrl = "https://zingy-croissant-41fd8a.netlify.app/";
+        const appUrl = "https://dr-osama-rabiei2120.netlify.app/";
 
         // Toggle password visibility functionality
         togglePassword.addEventListener('click', function () {
@@ -154,3 +154,4 @@
 
 </body>
 </html>
+
