--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         // IMPORTANT: The password hash and URL remain unchanged
         const correctPasswordHash = "385740178c87a79ca536356be79c443430c08658088287518bed061ff906f084";
-        const appUrl = "https://dr-osama-rabiei520.netlify.app/";
+        const appUrl = "https://doctor-osama-rabiei102.netlify.app/";
 
         // Toggle password visibility functionality
         togglePassword.addEventListener('click', function () {
@@ -154,6 +154,7 @@
 
 </body>
 </html>
+
 
 
 
