--- a/index.html
+++ b/index.html
@@ -49,17 +49,13 @@
 </head>
 <body class="text-white flex flex-col items-center justify-center min-h-screen p-4 sm:p-6">
 
-    <!-- Main Content Container with Glassmorphism Effect -->
     <div class="w-full max-w-2xl mx-auto bg-black/30 backdrop-blur-xl border border-white/10 rounded-3xl shadow-2xl p-6 sm:p-10">
-        <div class="flex flex-col items-center text-center space-y-10">
+        <div class="flex flex-col items-center text-center space-y-4"> 
             
-            <!-- Header Section -->
-            <div class="flex flex-col items-center space-y-4">
-                <h1 class="text-4xl sm:text-5xl md:text-6xl font-black tracking-tight gradient-text">SuperEgyptawy</h1>
+            <div class="flex flex-col items-center space-y-2"> <img src="https://i.postimg.cc/gk5hbQT5/Create-a-professional-20250905-unscreen.gif" alt="App Logo" class="w-48 h-48 rounded-full object-cover shadow-lg"> <h1 class="text-4xl sm:text-5xl md:text-6xl font-black tracking-tight gradient-text">SuperEgyptawy</h1>
                 <p class="text-lg sm:text-xl text-gray-300 max-w-md">أدخل كلمة المرور للدخول إلى التطبيق.</p>
             </div>
             
-            <!-- Login Form -->
             <form id="loginForm" class="flex flex-col items-center space-y-5 w-full max-w-xs">
                 <div class="relative w-full">
                     <input type="password" id="passwordInput" placeholder="كلمة المرور" class="w-full pl-12 pr-4 py-3 bg-gray-900/50 border border-gray-600 rounded-full text-white text-center placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-sky-400 transition-all duration-300" required autocomplete="current-password">
@@ -73,10 +69,8 @@
                 <p id="errorMessage" class="text-red-400 text-sm h-5 font-semibold"></p> 
             </form>
 
-            <!-- Divider -->
             <hr class="w-2/3 border-gray-700/50">
 
-            <!-- Contact Section -->
             <div class="flex flex-col items-center space-y-5">
                 <img src="https://i.postimg.cc/QN19vQHF/OVNagv-RA0-Oaa-512-512.png" alt="صورة شخصية" class="w-24 h-24 rounded-full border-4 border-sky-400 object-cover shadow-lg">
                 <h2 class="text-2xl sm:text-3xl font-bold text-white">التواصل معي شخصياً</h2>
@@ -91,7 +85,6 @@
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="absolute bottom-0 w-full text-center py-4">
         <p class="text-gray-400 text-sm">Powered by: Dr.Osama Rabiei</p>
     </footer>
@@ -154,12 +147,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
